[project]
name = "time-series-datascience"
version = "0.1.0"
description = ""
authors = [
    {name = "Tobias",email = "tobias.bp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "statsmodels (>=0.14.5,<0.15.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
